[package]
name = "todo"
version = "0.1.0"
authors = ["Daniel Rees <daniel_james_rees@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.51"
uuid = {version = "0.8.1", features = ["v4"]}

[dev-dependencies]
tempfile = "3.1.0"